; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_connectors.c_amdgpu_connector_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_connectors.c_amdgpu_connector_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_connector = type { i32 }
%struct.amdgpu_connector = type { %struct.drm_connector* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_connector*)* @amdgpu_connector_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @amdgpu_connector_destroy(%struct.drm_connector* %0) #0 {
  %2 = alloca %struct.drm_connector*, align 8
  %3 = alloca %struct.amdgpu_connector*, align 8
  store %struct.drm_connector* %0, %struct.drm_connector** %2, align 8
  %4 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %5 = call %struct.amdgpu_connector* @to_amdgpu_connector(%struct.drm_connector* %4)
  store %struct.amdgpu_connector* %5, %struct.amdgpu_connector** %3, align 8
  %6 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %7 = call i32 @amdgpu_connector_free_edid(%struct.drm_connector* %6)
  %8 = load %struct.amdgpu_connector*, %struct.amdgpu_connector** %3, align 8
  %9 = getelementptr inbounds %struct.amdgpu_connector, %struct.amdgpu_connector* %8, i32 0, i32 0
  %10 = load %struct.drm_connector*, %struct.drm_connector** %9, align 8
  %11 = call i32 @kfree(%struct.drm_connector* %10)
  %12 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %13 = call i32 @drm_connector_unregister(%struct.drm_connector* %12)
  %14 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %15 = call i32 @drm_connector_cleanup(%struct.drm_connector* %14)
  %16 = load %struct.drm_connector*, %struct.drm_connector** %2, align 8
  %17 = call i32 @kfree(%struct.drm_connector* %16)
  ret void
}

declare dso_local %struct.amdgpu_connector* @to_amdgpu_connector(%struct.drm_connector*) #1

declare dso_local i32 @amdgpu_connector_free_edid(%struct.drm_connector*) #1

declare dso_local i32 @kfree(%struct.drm_connector*) #1

declare dso_local i32 @drm_connector_unregister(%struct.drm_connector*) #1

declare dso_local i32 @drm_connector_cleanup(%struct.drm_connector*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
